Combine matches with regex

--- a/match/symbols.yml
+++ b/match/symbols.yml
@@ -5,9 +5,7 @@ matches:
     replace: "≤"
   - trigger: ":>="
     replace: "≥"
-  - trigger: ":!="
-    replace: "≠"
-  - trigger: ":/="
+  - regex: ":(!|/)="
     replace: "≠"
   - trigger: ":~="
     replace: "≈"
@@ -17,7 +15,5 @@ matches:
     replace: "⧜"
   - trigger: ":oo"
     replace: "∞"
-  - trigger: ":o/o"
-    replace: "⧞"
-  - trigger: ":o|o"
+  - regex: ":o(/|\\|)o"
     replace: "⧞"
