--- a/_manifest.yml
+++ b/_manifest.yml
@@ -1,4 +1,5 @@
 name: "pinks-package"
 title: "Pink's Package"
+description: "Random things for personal use."
 version: "0.1.0"
 author: "The Pink Hacker"
