Tweaked division and multiplication symbols
I'm tired of urls being changed to division symbols…

--- a/package.yml
+++ b/package.yml
@@ -18,9 +18,9 @@ matches:
     replace: "∞"
   - regex: ":o(/|\\|)o"
     replace: "⧞"
-  - regex: ":(x|\\*)"
+  - regex: ":(mul|multiply)"
     replace: "×"
-  - trigger: ":/"
+  - trigger: ":(div|divide)"
     replace: "÷"
 
   # Superscripts
